--- a/Views/Home/Librarian.cshtml
+++ b/Views/Home/Librarian.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.EntityFrameworkCore
+@* @using System.Web.Helpers; *@
 @model Librarian
 
 @{
@@ -12,18 +13,35 @@
     <p></p>
     <p>Librarian page ... Purbai</p>
 
-
-    <p>Librarian number: @Model.Id</p>
-    <p>Name: @Model.Name</p>
+    <!-- <p>Librarian number: @Model.Id</p>
+    <p>Name: @Model.Name</p> -->
 
 </div>
 
 @{
     using (var context = new BookishContext())
     {
-    foreach (var librarian in context.Librarian)
-    {
-        <p>@librarian.Id : @librarian.Name</p>
+
+        var grid = new WebGrid(source: context.Librarian);
+
+        <div>
+            @grid.GetHtml()
+        </div>
+
+        //foreach (var librarian in context.Librarian)
+        //{
+            //<p>@librarian.Id : @librarian.Name</p>
+        //}
     }
-    }
+
+    <form method="post">
+        <fieldset>
+            <legend>New Librarian</legend>
+            <p><label for="title">Name:</label>
+                <input type="text" name="title" value="@Request.Form["Name"]" />
+            </p>
+
+            <p><input type="submit" name="buttonSubmit" value="Add Movie" /></p>
+        </fieldset>
+    </form>
 }
